# Buddies.Web/src/api/model/searchResponse.ts
@@ -1,4 +1,4 @@
-/**
+﻿/**
  * Buddies.API, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
@@ -10,11 +10,8 @@
  * Do not edit the class manually.
  */
 
-export interface CreateProjectRequest {
-  title: string;
-  location: string;
-  invitedUsers: Array<string>;
-  description: string;
-  category: string;
-  maxMembers: number;
+export interface SearchResponse {
+  searches: Array<string>;
+  totalPages: number;
+  currentPage: number;
 }
